--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="sommaire">
         <h2>Sommaire:</h2>
         <ol>
-            <li>Caractéristiques</li>
+            <li>Caractéristiques techniques</li>
             <li>Les points forts et les points faibles du lapin</li>
             <li>Les différentes races</li>
             <li>Leurs mode de vie</li>
